--- a/docker-jenkins/docker-compose.yml
+++ b/docker-jenkins/docker-compose.yml
@@ -1,48 +1,73 @@
-version: "3.8"
+version: '3.8'
 
 services:
   jenkins:
     image: jenkins/jenkins:${JENKINS_TAG:-latest}
-    user: root
+    user: jenkins
     ports:
       - 50000:50000
+      - 8080:8080
     networks:
       - jenkins_net
       - gw_net
     environment:
-      - VIRTUAL_HOST=${VIRTUAL_HOST}
-      - LETSENCRYPT_HOST=${LETSENCRYPT_HOST}
-      - LETSENCRYPT_EMAIL=${LETSENCRYPT_EMAIL}
-      - VIRTUAL_PORT=8080
-      - TZ=Europe/Moscow
-      - 'JAVA_OPTS=-Djava.util.logging.SimpleFormatter.format="[%1$tY-%1$tm-%1$td %1$tH:%1$tM:%1$tS] %4$s: %2$s - %5$s %6$s%n"'
+      VIRTUAL_HOST: ${VIRTUAL_HOST}
+      VIRTUAL_PORT: 8080
+      TZ: Europe/Kiev
+      JAVA_OPTS: >
+        -Xms1g
+        -Xmx2g
+        -XX:+UseG1GC
+        -XX:+HeapDumpOnOutOfMemoryError
+        -Djava.awt.headless=true
     volumes:
       - jenkins_home:/var/jenkins_home
+    healthcheck:
+      test: ['CMD-SHELL', 'curl -fs http://localhost:8080/login || exit 1']
+      interval: 30s
+      timeout: 5s
+      retries: 3
+    logging:
+      driver: json-file
+      options:
+        max-size: '100m'
+        max-file: '5'
     deploy:
       placement:
         constraints:
-          - "node.role==worker"
+          - 'node.role==worker'
       replicas: 1
+      resources:
+        limits:
+          cpus: "2.0"
+          memory: 3G
+        reservations:
+          cpus: "1.0"
+          memory: 1.5G
       update_config:
         parallelism: 1
         delay: 10s
         order: start-first
         failure_action: pause
+      restart_policy:
+        condition: on-failure
+        delay: 5s
+        max_attempts: 3
 
   jenkins-agent:
     image: jenkins/agent:${JENKINS_AGENT_TAG:-latest}
     command:
       [
-        "java",
-        "-jar",
-        "/usr/share/jenkins/slave.jar",
-        "-name",
-        "jenkins-agent",
-        "-url",
-        "http://jenkins:8080/",
-        "-secret",
-        "${JENKINS_SECRET}",
-        "-webSocket",
+        'java',
+        '-jar',
+        '/usr/share/jenkins/slave.jar',
+        '-name',
+        'jenkins-agent',
+        '-url',
+        'http://jenkins:8080/',
+        '-secret',
+        '${JENKINS_SECRET}',
+        '-webSocket',
       ]
     init: true
     stdin_open: true
@@ -50,13 +75,23 @@ services:
     networks:
       - jenkins_net
     environment:
-      - "JENKINS_URL=http://jenkins:8080"
+      JENKINS_URL: http://jenkins:8080
+      TZ: Europe/Kiev
     volumes:
       - /etc/localtime:/etc/localtime:ro
     deploy:
       placement:
         constraints:
-          - "node.role==worker"
+          - 'node.role==worker'
+      mode: replicated
+      replicas: 1
+      resources:
+        limits:
+          cpus: "1.0"
+          memory: 1G
+
+      restart_policy:
+        condition: on-failure
       update_config:
         delay: 10s
         order: start-first
@@ -73,6 +108,6 @@ volumes:
   jenkins_home:
     driver: local
     driver_opts:
-      type: "none"
-      o: "bind"
-      device: "${JENKINS_HOME_PATH}"
+      type: 'none'
+      o: 'bind'
+      device: '${JENKINS_HOME_PATH}'
