--- a/docker-jenkins/docker-compose.yml
+++ b/docker-jenkins/docker-compose.yml
@@ -10,6 +10,7 @@ services:
     networks:
       - jenkins_net
       - gw_net
+      - monitoring_net
     environment:
       VIRTUAL_HOST: ${VIRTUAL_HOST}
       VIRTUAL_PORT: 8080
@@ -103,6 +104,10 @@ networks:
   gw_net:
     external: true
     name: gateway_gw_net
+  monitoring_net:
+    external: true
+    name: monitoring_monitoring_net
+
 
 volumes:
   jenkins_home:
